--- a/index.html
+++ b/index.html
@@ -172,7 +172,112 @@
   <div class="our-works">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <div class="card-img" style="background-image: url('./assets/images/1.png');">
+              <div class="overlay">
+                <a class="funcy-box-media" href="./assets/images/1.png">
+                  <i class="fa fa-plus"></i>
+                </a>
+              </div>
+              <div class="card-info">
+                <a href="">اسم المشروع قابل للتعديل</a>
+                <i class="fa fa-search"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <div class="card-img" style="background-image: url('./assets/images/2.png');">
+              <div class="overlay">
+                <a class="funcy-box-media" href="./assets/images/2.png">
+                  <i class="fa fa-plus"></i>
+                </a>
+              </div>
+              <div class="card-info">
+                <a href="">اسم المشروع قابل للتعديل</a>
+                <i class="fa fa-search"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <div class="card-img" style="background-image: url('./assets/images/3.png');">
+              <div class="overlay">
+                <a class="funcy-box-media" href="./assets/images/3.png">
+                  <i class="fa fa-plus"></i>
+                </a>
+              </div>
+              <div class="card-info">
+                <a href="">اسم المشروع قابل للتعديل</a>
+                <i class="fa fa-search"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <div class="card-img" style="background-image: url('./assets/images/4.png');">
+              <div class="overlay">
+                <a class="funcy-box-media" href="./assets/images/4.png">
+                  <i class="fa fa-plus"></i>
+                </a>
+              </div>
+              <div class="card-info">
+                <a href="">اسم المشروع قابل للتعديل</a>
+                <i class="fa fa-search"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <div class="card-img" style="background-image: url('./assets/images/5.png');">
+              <div class="overlay">
+                <a class="funcy-box-media" href="./assets/images/5.png">
+                  <i class="fa fa-plus"></i>
+                </a>
+              </div>
+              <div class="card-info">
+                <a href="">اسم المشروع قابل للتعديل</a>
+                <i class="fa fa-search"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <div class="card-img" style="background-image: url('./assets/images/6.png');">
+              <div class="overlay">
+                <a class="funcy-box-media" href="./assets/images/6.png">
+                  <i class="fa fa-plus"></i>
+                </a>
+              </div>
+              <div class="card-info">
+                <a href="">اسم المشروع قابل للتعديل</a>
+                <i class="fa fa-search"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <div class="card-img" style="background-image: url('./assets/images/7.png');">
+              <div class="overlay">
+                <a class="funcy-box-media" href="./assets/images/7.png">
+                  <i class="fa fa-plus"></i>
+                </a>
+              </div>
+              <div class="card-info">
+                <a href="">اسم المشروع قابل للتعديل</a>
+                <i class="fa fa-search"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
             <div class="card-img" style="background-image: url('./assets/images/work.png');">
               <div class="overlay">
@@ -186,113 +291,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card">
-            <div class="card-img" style="background-image: url('./assets/images/work.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/work.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
-              <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
-                <i class="fa fa-search"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card">
-            <div class="card-img" style="background-image: url('./assets/images/work.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/work.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
-              <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
-                <i class="fa fa-search"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card">
-            <div class="card-img" style="background-image: url('./assets/images/work.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/work.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
-              <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
-                <i class="fa fa-search"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card">
-            <div class="card-img" style="background-image: url('./assets/images/work.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/work.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
-              <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
-                <i class="fa fa-search"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card">
-            <div class="card-img" style="background-image: url('./assets/images/work.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/work.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
-              <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
-                <i class="fa fa-search"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card">
-            <div class="card-img" style="background-image: url('./assets/images/work.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/work.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
-              <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
-                <i class="fa fa-search"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="card">
-            <div class="card-img" style="background-image: url('./assets/images/work.png');">
-              <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/work.png">
-                  <i class="fa fa-plus"></i>
-                </a>
-              </div>
-              <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
-                <i class="fa fa-search"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-12 col-lg-12">
+        </div> -->
+        <div class="col-sm-12 col-md-12 col-lg-12">
           <div class="btn-more">
             <a href="" class="btn">مزيد من الأعمال</a>
           </div>
@@ -309,7 +309,7 @@
         </p>
       </div>
       <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-6 col-lg-3">
           <div class="card card-1">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
@@ -321,7 +321,7 @@
             <a href="" class="card-title">تصميم تطبيق توصيل طلبات</a>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-6 col-lg-3">
           <div class="card card-2">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
@@ -334,7 +334,7 @@
               حجز مواعيد</a>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-6 col-lg-3">
           <div class="card card-3">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
@@ -347,7 +347,7 @@
               حراج</a>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-6 col-lg-3">
           <div class="card card-4">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
@@ -360,7 +360,7 @@
               للايفون</a>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-6 col-lg-3">
           <div class="card card-5">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
@@ -373,7 +373,7 @@
               متجر</a>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-6 col-lg-3">
           <div class="card card-6">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
@@ -386,7 +386,7 @@
               مثل مرسول</a>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-6 col-lg-3">
           <div class="card card-7">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
@@ -399,7 +399,7 @@
               توصيل</a>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-6 col-lg-3">
           <div class="card card-8">
             <img class="circle-1" src="./assets/images/circle.png" alt="">
             <img class="circle-2" src="./assets/images/circle.png" alt="">
@@ -433,7 +433,7 @@
       </div>
       <div class="faq-accordion">
         <div class="row">
-          <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-6">
             <div class="single-faq">
               <button class="btn btn-block" data-toggle="collapse" data-target="#question-1">
                 <h5>تعرف علينا وعلى بعض خدماتنا التي نقدمها لكم بعناية
@@ -451,7 +451,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-6">
             <div class="single-faq">
               <button class="btn btn-block" data-toggle="collapse" data-target="#question-2">
                 <h5>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص ؟</h5>
@@ -471,7 +471,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-6">
             <div class="single-faq">
               <button class="btn btn-block" data-toggle="collapse" data-target="#question-3">
                 <h5>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص ؟</h5>
@@ -489,7 +489,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-6">
             <div class="single-faq">
               <button class="btn btn-block" data-toggle="collapse" data-target="#question-4">
                 <h5>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص ؟</h5>
@@ -509,7 +509,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-6">
             <div class="single-faq">
               <button class="btn btn-block" data-toggle="collapse" data-target="#question-5">
                 <h5>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص ؟</h5>
@@ -527,7 +527,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-6">
             <div class="single-faq">
               <button class="btn btn-block" data-toggle="collapse" data-target="#question-6">
                 <h5>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص ؟</h5>
@@ -547,7 +547,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-6">
             <div class="single-faq">
               <button class="btn btn-block" data-toggle="collapse" data-target="#question-7">
                 <h5>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص ؟</h5>
@@ -565,7 +565,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-6">
             <div class="single-faq">
               <button class="btn btn-block" data-toggle="collapse" data-target="#question-8">
                 <h5>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص ؟</h5>
@@ -585,7 +585,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-6">
             <div class="single-faq">
               <button class="btn btn-block" data-toggle="collapse" data-target="#question-9">
                 <h5>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص ؟</h5>
@@ -603,7 +603,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-6">
             <div class="single-faq">
               <button class="btn btn-block" data-toggle="collapse" data-target="#question-10">
                 <h5>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص ؟</h5>
@@ -634,7 +634,7 @@
         </p>
       </div>
       <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-6 col-lg-4">
           <div class="card">
             <div class="card-image">
               <span class="date">
@@ -651,7 +651,7 @@
           </div>
         </div>
         <!-- REBAET -->
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-6 col-lg-4">
           <div class="card">
             <div class="card-image">
               <span class="date">
@@ -668,7 +668,7 @@
           </div>
         </div>
         <!-- REBAET -->
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-6 col-lg-4">
           <div class="card">
             <div class="card-image">
               <span class="date">
@@ -685,7 +685,7 @@
           </div>
         </div>
         <!-- REBAET -->
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-6 col-lg-4">
           <div class="card">
             <div class="card-image">
               <span class="date">
@@ -702,7 +702,7 @@
           </div>
         </div>
         <!-- REBAET -->
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-6 col-lg-4">
           <div class="card">
             <div class="card-image">
               <span class="date">
@@ -719,7 +719,7 @@
           </div>
         </div>
         <!-- REBAET -->
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-6 col-lg-4">
           <div class="card">
             <div class="card-image">
               <span class="date">
