--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </a>
               </div>
               <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
+                <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%b3%d9%85%d9%88-%d8%a7%d9%84%d9%81%d8%a7%d9%83%d9%87%d8%a9-%d9%84%d9%84%d8%ae%d8%b6%d8%b1%d9%88%d8%a7%d8%aa-%d9%88%d8%a7%d9%84%d9%81%d9%88%d8%a7%d9%83%d9%87%d8%a9/">سمو الفاكهة</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
@@ -196,7 +196,7 @@
                 </a>
               </div>
               <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
+                <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b7%d8%a7%d8%b9%d9%85-%d8%af%d9%8a%d8%b1%d8%aa%d9%8a/">تطبيق ديرتي</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
@@ -211,7 +211,7 @@
                 </a>
               </div>
               <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
+                <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%b3%d9%88%d9%85-%d9%84%d8%a8%d9%8a%d8%b9-%d9%88%d8%b4%d8%b1%d8%a7%d8%a1-%d8%a7%d9%84%d8%b9%d9%82%d9%80%d9%80%d8%a7%d8%b1%d8%a7%d8%aa/">تطبيق سوم</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
@@ -226,7 +226,7 @@
                 </a>
               </div>
               <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
+                <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%a3%d8%b4%d8%b1%d8%a8-%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%b7%d9%84%d8%a8-%d9%85%d9%8a%d8%a7%d9%87-%d8%aa%d8%b5%d9%85%d9%8a%d9%85-%d8%aa%d8%b7%d8%a8%d9%8a%d9%82/">تطبيق اشرب</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
@@ -241,7 +241,8 @@
                 </a>
               </div>
               <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
+                <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d8%a7%d9%84%d8%ad%d8%a7%d9%81%d8%b8/">تطبيق الحافظ
+              </a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
@@ -256,7 +257,7 @@
                 </a>
               </div>
               <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
+                <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b7%d8%a7%d8%b9%d9%85-%d9%84%d9%8a%d9%85%d9%88%d9%86%d8%a9/">تطبيق مطاعم ليمونه</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
@@ -271,7 +272,7 @@
                 </a>
               </div>
               <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
+                <a target="_blank" href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%ad%d8%a7%d9%85%d8%b5-%d8%a7%d9%84%d8%b9%d9%84%d9%8a/">تطبيق محامص العلي</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
