--- a/index.html
+++ b/index.html
@@ -278,21 +278,21 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <div class="card-img" style="background-image: url('./assets/images/work.png');">
+            <div class="card-img" style="background-image: url('./assets/images/8.png');">
               <div class="overlay">
-                <a class="funcy-box-media" href="./assets/images/work.png">
+                <a class="funcy-box-media" href="./assets/images/8.png">
                   <i class="fa fa-plus"></i>
                 </a>
               </div>
               <div class="card-info">
-                <a href="">اسم المشروع قابل للتعديل</a>
+                <a target="_blank" href="">اسم المشروع قابل للتعديل</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
         <div class="col-sm-12 col-md-12 col-lg-12">
           <div class="btn-more">
             <a href="" class="btn">مزيد من الأعمال</a>
