--- a/index.html
+++ b/index.html
@@ -18,111 +18,39 @@
 
   <!-- header -->
   <div class="header-parent">
-    <div class="header">
-      <div class="header-slider owl-carousel" dir="ltr">
-        <div class="slider-item" style="background-image: url('./assets/images/slider-1.png');">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12 col-md-5 col-lg-6">
-                <div class="header-content">
-                  <h6>تصميم</h6>
-                  <h5>تطبيقات الجوال بجودة لا مثيل لها</h5>
-                  <ul class="list-unstyled">
-                    <li>1-تصميم تطبيقات الهواتف الذكية</li>
-                    <li>2-تصميم تطبيقات المتاجر الإلكترونية</li>
-                    <li>3-تصميم تطبيقات الايفون</li>
-                    <li>4-تصميم تطبيقات اندرويد</li>
-                    <li>5-تصميم تطبيق مثل حراج</li>
-                    <li>6-تصميم تطبيق توصيل طلبات</li>
-                    <li>7-اسعار تصميم التطبيقات مناسبة للجميع الشركات والمتاجر</li>
-                    <li>8-برمجة تطبيقات الجوال</li>
-                    <li>9-أفضل شركة لعمل تطبيقات في السعودية</li>
-                    <li>10-تكلفة تصميم تطبيق للايفون ميسورة للجميع الميزانيات.</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-sm-12 col-md-7 col-lg-6">
+    <div class="header" style="background-image: url('./assets/images/slider-1.png');">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-5">
+            <div class="header-content">
+              <h6>تصميم</h6>
+              <h5>تطبيقات الجوال بجودة لا مثيل لها</h5>
+              <ul class="list-unstyled">
+                <li>1-تصميم تطبيقات الهواتف الذكية</li>
+                <li>2-تصميم تطبيقات المتاجر الإلكترونية</li>
+                <li>3-تصميم تطبيقات الايفون</li>
+                <li>4-تصميم تطبيقات اندرويد</li>
+                <li>5-تصميم تطبيق مثل حراج</li>
+                <li>6-تصميم تطبيق توصيل طلبات</li>
+                <li>7-اسعار تصميم التطبيقات مناسبة للجميع الشركات والمتاجر</li>
+                <li>8-برمجة تطبيقات الجوال</li>
+                <li>9-أفضل شركة لعمل تطبيقات في السعودية</li>
+                <li>10-تكلفة تصميم تطبيق للايفون ميسورة للجميع الميزانيات.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-7">
+            <div class="header-slider owl-carousel" dir="ltr">
+              <div class="slider-item">
                 <img src="./assets/images/slider1-img.png" alt="">
               </div>
-            </div>
-          </div>
-        </div>
-        <div class="slider-item" style="background-image: url('./assets/images/slider-2.png');">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12 col-md-5 col-lg-6">
-                <div class="header-content">
-                  <h6>تصميم</h6>
-                  <h5>تطبيقات الجوال بجودة لا مثيل لها</h5>
-                  <ul class="list-unstyled">
-                    <li>1-تصميم تطبيقات الهواتف الذكية</li>
-                    <li>2-تصميم تطبيقات المتاجر الإلكترونية</li>
-                    <li>3-تصميم تطبيقات الايفون</li>
-                    <li>4-تصميم تطبيقات اندرويد</li>
-                    <li>5-تصميم تطبيق مثل حراج</li>
-                    <li>6-تصميم تطبيق توصيل طلبات</li>
-                    <li>7-اسعار تصميم التطبيقات مناسبة للجميع الشركات والمتاجر</li>
-                    <li>8-برمجة تطبيقات الجوال</li>
-                    <li>9-أفضل شركة لعمل تطبيقات في السعودية</li>
-                    <li>10-تكلفة تصميم تطبيق للايفون ميسورة للجميع الميزانيات.</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-sm-12 col-md-7 col-lg-6">
+              <div class="slider-item">
                 <img src="./assets/images/slider2-img.png" alt="">
               </div>
-            </div>
-          </div>
-        </div>
-        <div class="slider-item" style="background-image: url('./assets/images/header.png');">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12 col-md-5 col-lg-6">
-                <div class="header-content">
-                  <h6>تصميم</h6>
-                  <h5>تطبيقات الجوال بجودة لا مثيل لها</h5>
-                  <ul class="list-unstyled">
-                    <li>1-تصميم تطبيقات الهواتف الذكية</li>
-                    <li>2-تصميم تطبيقات المتاجر الإلكترونية</li>
-                    <li>3-تصميم تطبيقات الايفون</li>
-                    <li>4-تصميم تطبيقات اندرويد</li>
-                    <li>5-تصميم تطبيق مثل حراج</li>
-                    <li>6-تصميم تطبيق توصيل طلبات</li>
-                    <li>7-اسعار تصميم التطبيقات مناسبة للجميع الشركات والمتاجر</li>
-                    <li>8-برمجة تطبيقات الجوال</li>
-                    <li>9-أفضل شركة لعمل تطبيقات في السعودية</li>
-                    <li>10-تكلفة تصميم تطبيق للايفون ميسورة للجميع الميزانيات.</li>
-                  </ul>
-                </div>
+              <div class="slider-item">
+                <img src="./assets/images/header-img4.png" alt="">
               </div>
-              <div class="col-sm-12 col-md-7 col-lg-6">
-                <img class="man-cart" src="./assets/images/header-img4.png" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="slider-item" style="background-image: url('./assets/images/slider-3.png');">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12 col-md-5 col-lg-6">
-                <div class="header-content">
-                  <h6>تصميم</h6>
-                  <h5>تطبيقات الجوال بجودة لا مثيل لها</h5>
-                  <ul class="list-unstyled">
-                    <li>1-تصميم تطبيقات الهواتف الذكية</li>
-                    <li>2-تصميم تطبيقات المتاجر الإلكترونية</li>
-                    <li>3-تصميم تطبيقات الايفون</li>
-                    <li>4-تصميم تطبيقات اندرويد</li>
-                    <li>5-تصميم تطبيق مثل حراج</li>
-                    <li>6-تصميم تطبيق توصيل طلبات</li>
-                    <li>7-اسعار تصميم التطبيقات مناسبة للجميع الشركات والمتاجر</li>
-                    <li>8-برمجة تطبيقات الجوال</li>
-                    <li>9-أفضل شركة لعمل تطبيقات في السعودية</li>
-                    <li>10-تكلفة تصميم تطبيق للايفون ميسورة للجميع الميزانيات.</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-sm-12 col-md-7 col-lg-6">
+              <div class="slider-item">
                 <img src="./assets/images/slider3-img.png" alt="">
               </div>
             </div>
@@ -247,13 +175,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card">
+          <div class="card card-1">
             <div class="card-img" style="background-image: url('./assets/images/1.png');">
-              <div class="overlay">
+              <!-- <div class="overlay">
                 <a class="funcy-box-media" href="./assets/images/1.png">
                   <i class="fa fa-plus"></i>
                 </a>
-              </div>
+              </div> -->
               <div class="card-info">
                 <a target="_blank"
                   href="https://mobi.art4muslim.com/portfolio/%d8%b3%d9%85%d9%88-%d8%a7%d9%84%d9%81%d8%a7%d9%83%d9%87%d8%a9-%d9%84%d9%84%d8%ae%d8%b6%d8%b1%d9%88%d8%a7%d8%aa-%d9%88%d8%a7%d9%84%d9%81%d9%88%d8%a7%d9%83%d9%87%d8%a9/">سمو
@@ -264,7 +192,7 @@
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card">
+          <div class="card card-2">
             <div class="card-img" style="background-image: url('./assets/images/2.png');">
               <div class="overlay">
                 <a class="funcy-box-media" href="./assets/images/2.png">
@@ -281,7 +209,7 @@
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card">
+          <div class="card card-3">
             <div class="card-img" style="background-image: url('./assets/images/3.png');">
               <div class="overlay">
                 <a class="funcy-box-media" href="./assets/images/3.png">
@@ -298,7 +226,7 @@
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card">
+          <div class="card card-4">
             <div class="card-img" style="background-image: url('./assets/images/4.png');">
               <div class="overlay">
                 <a class="funcy-box-media" href="./assets/images/4.png">
@@ -315,7 +243,7 @@
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card">
+          <div class="card card-5">
             <div class="card-img" style="background-image: url('./assets/images/5.png');">
               <div class="overlay">
                 <a class="funcy-box-media" href="./assets/images/5.png">
@@ -333,7 +261,7 @@
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card">
+          <div class="card card-6">
             <div class="card-img" style="background-image: url('./assets/images/6.png');">
               <div class="overlay">
                 <a class="funcy-box-media" href="./assets/images/6.png">
@@ -350,7 +278,7 @@
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card">
+          <div class="card card-7">
             <div class="card-img" style="background-image: url('./assets/images/7.png');">
               <div class="overlay">
                 <a class="funcy-box-media" href="./assets/images/7.png">
@@ -367,7 +295,7 @@
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="card">
+          <div class="card card-8">
             <div class="card-img" style="background-image: url('./assets/images/8.png');">
               <div class="overlay">
                 <a class="funcy-box-media" href="./assets/images/8.png">
@@ -375,7 +303,7 @@
                 </a>
               </div>
               <div class="card-info">
-                <a target="_blank" href="">اسم المشروع قابل للتعديل</a>
+                <a href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b2%d8%a7%d9%8a%d8%a7/" target="_blank" href="">تطبيق مزايا</a>
                 <i class="fa fa-search"></i>
               </div>
             </div>
@@ -383,7 +311,7 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12">
           <div class="btn-more">
-            <a href="" class="btn">مزيد من الأعمال</a>
+            <a href="https://mobi.art4muslim.com/portfolio/%d8%aa%d8%b7%d8%a8%d9%8a%d9%82-%d9%85%d8%b2%d8%a7%d9%8a%d8%a7/" class="btn">مزيد من الأعمال</a>
           </div>
         </div>
       </div>
